Anzeige Quota optimiert

--- a/zp/timeline-unified.html
+++ b/zp/timeline-unified.html
@@ -5165,7 +5165,8 @@
                                     quota_dz: Number(entry.quota_dz ?? 0),
                                     quota_betten: Number(entry.quota_betten ?? 0),
                                     quota_lager: Number(entry.quota_lager ?? 0),
-                                    quota_sonder: Number(entry.quota_sonder ?? 0)
+                                    quota_sonder: Number(entry.quota_sonder ?? 0),
+                                    quota_is_multi_day: Boolean(entry.quota_is_multi_day)
                                 }));
 
                                 // DEBUG: Log first parsed entry
